--- a/_posts/2019-02-18-KernelML-Kernel-Machine-Learning.html
+++ b/_posts/2019-02-18-KernelML-Kernel-Machine-Learning.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Kernel Machine Learning - KernelML - Generalized Machine Learning"
+title:  "KernelML - Generalized Machine Learning"
 date: 2019-02-18 12:00:00
 author: Rohan Kotwani
 excerpt: "KernelML"
