add KernelML - HDR

--- a/_posts/2019-02-18-KernelML-HDR-Estimation.html
+++ b/_posts/2019-02-18-KernelML-HDR-Estimation.html
@@ -23,7 +23,7 @@ tags:
     
     <p>Please see the notebook for High Density Region Estimation with KernelML on the <a href="https://github.com/Freedomtowin/kernelml/blob/master/kernelml-high-density-region-estimator.ipynb">documentation page</a>.</p>
 
-    </h1>High Density Region Estimation</h1>
+    <h1>High Density Region Estimation</h1>
 
     <p>
     Data scientists and predictive modelers often use 1-D and 2-D aggregate statistics for exploratory analysis, data cleaning, and feature creation. Higher dimensional aggregations, i.e., 3 dimensional and above, are more difficult to visualize and understand. High density regions are one example of these N-dimensional statistics. High density regions can be useful for summarizing common characteristics across multiple variables. Another use case is to validate a forecast prediction’s plausibility by exploring the densities associated with the forecast. Other machine learning approaches such as clustering and kernel density estimation are similar to finding high density regions, but these methods are different in a few important ways. It is worth noting why these methods, while useful, are not design exactly designed for the purpose of finding these regions. The goal is to use KernelML to efficiently find the regions of highest density for an N-dimensional dataset.</p>
