add KernelML - HDR

--- a/_posts/2019-02-18-KernelML-HDR-Estimation.html
+++ b/_posts/2019-02-18-KernelML-HDR-Estimation.html
@@ -18,10 +18,7 @@ tags:
 <body>
 
     <p>
-    KernelML is a brute force optimizer that uses parameter constraints and sampling methods to minimize a customizable loss function. The package uses a Cythonized backend and parallelizes operations across multiple cores with the IpyParallel. KernelML is now available on the Anaconda cloud and PyPi (pip).
-    </p>
-    
-    <p>Please see the notebook for High Density Region Estimation with KernelML on the <a href="https://github.com/Freedomtowin/kernelml/blob/master/kernelml-high-density-region-estimator.ipynb">documentation page</a>.</p>
+    KernelML is a brute force optimizer that uses parameter constraints and sampling methods to minimize a customizable loss function. The package uses a Cythonized backend and parallelizes operations across multiple cores with the IpyParallel. KernelML is now available on the Anaconda cloud and PyPi (pip). Please see the notebook for High Density Region Estimation with KernelML on the <a href="https://github.com/Freedomtowin/kernelml/blob/master/kernelml-high-density-region-estimator.ipynb">documentation page</a>.</p>
 
     <h1>High Density Region Estimation</h1>
 
