--- a/_posts/2019-02-18-KernelML-High-Density-Region-Estimation.html
+++ b/_posts/2019-02-18-KernelML-High-Density-Region-Estimation.html
@@ -56,7 +56,7 @@ tags:
 
     <figure><img src='/hdre_images/output_2.png' /> <figcaption></figcaption></figure>
     
-    <p>The K function corresponds to a Gaussian kernel, h is the kernel's bandwidth, n is the number of data points, x is the dataset, and x_i is a grid point. Uing the KDE is impractical for estimating high density region for the following reason: let's say we have a medium size dataset with 10,000 rows and 30 columns. If we search 15 data points between the max and min of each dimension, the density will need to be estimated for a total of 15³⁰ data points. The cost is multiplied by the, vectorized, operation(s) needed to compute the distances between each grid point and the rest of the dataset. After computing the highest points of density, a "peak clustering" algorithm would be needed to assign high density points to a region.</p>
+    <p>The K function corresponds to a Gaussian kernel, h is the kernel's bandwidth, n is the number of data points, x is the dataset, and x_i is a grid point. The reason why using the KDE is impractical for estimating high density region can be seen in the following example: let's say we have a medium size dataset with 10,000 rows and 30 columns. If we search 15 data points between the max and min of each dimension, the density will need to be estimated for a total of 15³⁰ data points. The cost is multiplied by the, vectorized, operation(s) needed to compute the distances between each grid point and the rest of the dataset. After computing the highest points of density, a "peak clustering" algorithm would be needed to assign high density points to a region.</p>
     
     <h1>HDRE with KernelML</h1>
 
