--- a/_posts/2019-05-09-Covariance-Matrix-Non-Gaussian-Mixture-Models.html
+++ b/_posts/2019-05-09-Covariance-Matrix-Non-Gaussian-Mixture-Models.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Non-Gaussian Mixture Models - Covariance Matrix Application"
+title:  "Non-Gaussian Mixture Models - The Covariance Matrix Transform"
 date: 2019-05-09 12:00:00
 author: Rohan Kotwani
 excerpt: "Essential information about the covariance matrix for data scientists"
