--- a/_posts/2019-05-09-Covariance-Matrix-Non-Gaussian-Mixture-Models.html
+++ b/_posts/2019-05-09-Covariance-Matrix-Non-Gaussian-Mixture-Models.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "The Covariance Matrix Transform— Non-Gaussian Mixtures"
+title:  "Create Transformed Polygons Using the Covariance Matrix"
 date: 2019-05-09 12:00:00
 author: Rohan Kotwani
 excerpt: "Essential information about the covariance matrix for data scientists"
@@ -18,7 +18,7 @@ tags:
 <body>
 
     <p>
-    The covariance matrix has many interesting properties, and it can be found in mixture models, component analysis, Kalman filters, and more. Developing an intuition for how the covariance matrix operates is useful in understanding its  practical implications. This article will focus on a few important properties, associated proofs, and then some interesting practical applications, i.e., non-Gaussian mixture models.</p>
+    The covariance matrix has many interesting properties, and it can be found in mixture models, component analysis, Kalman filters, and more. Developing an intuition for how the covariance matrix operates is useful in understanding its  practical implications. This article will focus on a few important properties, associated proofs, and then some interesting practical applications, i.e., extracting transformed polygons from a Gaussian mixture's covariance matrix.</p>
     
     <p>I have often found that research papers do not specify the matrices' shapes when writing formulas. I have included this and other essential information to help data scientists code their own algorithms.</p>
 
