--- a/_posts/2019-05-09-Covariance-Matrix-Non-Gaussian-Mixture-Models.html
+++ b/_posts/2019-05-09-Covariance-Matrix-Non-Gaussian-Mixture-Models.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Create Transformed Polygons Using the Covariance Matrix"
+title:  "Transform Polygons Using the Covariance Matrix"
 date: 2019-05-09 12:00:00
 author: Rohan Kotwani
 excerpt: "Essential information about the covariance matrix for data scientists"
