--- a/_posts/2018-02-09-Pixel-Shift-Motion-Correction.html
+++ b/_posts/2018-02-09-Pixel-Shift-Motion-Correction.html
@@ -19,7 +19,7 @@ Real-Time Motion Correction— Pixel Shift — iOS
 
 <body>
 
-<p>The objective is to implement a motion correction algorithm for lateral movements in real-time on an iOS device. The project files can be found <a href="https://github.com/Freedomtowin/ios-camera-apps/tree/master/motion-correction-project-files">here</a>. Lateral movements and rotational movements around the x, y and z axes are shown in Figure 1. with respect to the camera phone.</p>
+<p>The objective is to implement a motion correction algorithm for lateral movements in real-time on an iOS device. The project files for implementing motion correction on an ios device can be found <a href="https://github.com/Freedomtowin/ios-camera-apps/tree/master/motion-correction-project-files">here</a>. Lateral movements and rotational movements around the x, y and z axes are shown in Figure 1. with respect to the camera phone.</p>
 
 <p>Pixel shift correction is a software based motion correction algorithm that approximates x and y axis lateral device motion. Camera motion can be corrected for by shifting the frame an optimal number of pixel, in the x or y direction, to maintain a stable video feed. This can be useful for taking videos at high zoom levels or to correct for “shaky” hands.</p>
 
