--- a/_posts/2018-02-09-Pixel-Shift-Motion-Correction.html
+++ b/_posts/2018-02-09-Pixel-Shift-Motion-Correction.html
@@ -14,7 +14,7 @@ tags:
 
 
 <head>
-Real-Time Motion Correction— Pixel Shift — iOS
+<h1>Real-Time Motion Correction— Pixel Shift — iOS</h1>
 </head>
 
 <body>
