--- a/_posts/2019-05-09-Covariance-Matrix-Non-Gaussian-Mixture-Models.html
+++ b/_posts/2019-05-09-Covariance-Matrix-Non-Gaussian-Mixture-Models.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Using the Covariance Matrix to Create N-Dimensional Polygons"
+title:  "Interesting Properties of the Covariance Matrix"
 date: 2019-05-09 12:00:00
 author: Rohan Kotwani
 excerpt: "Essential information about the covariance matrix for data scientists"
@@ -96,7 +96,7 @@ tags:
     
     <h1>Plotting Gaussian Mixture Contours</h1>
 
-    <p>The contours of a Gaussian mixture can be visualized across multiple dimensions by transforming a (2x2) unit circle with the sub-covariance matrix. A contour at a particular standard deviation can be plotted by multiplying the scale matrix's by the squared value of the desired standard deviation. The clusters are then shifted to their associated centroid values.</p>
+    <p>The contours of a Gaussian mixture can be visualized across multiple dimensions by transforming a (2x2) unit circle with the sub-covariance matrix. A contour at a particular standard deviation can be plotted by multiplying the scale matrix's by the squared value of the desired standard deviation. The clusters are then shifted to their associated centroid values.The code for generating the plot below can be found <a href="https://gist.github.com/freedomtowin/a196b8026b96a9264fdbd45aa77bae12">here.</a></p>
 
     <figure><img src='/non_gauss_images/output_11.png' /> <figcaption></figcaption></figure>
     
