--- a/_posts/2020-02-25-Genetic-Direction-Based-Stochastic-Search.html
+++ b/_posts/2020-02-25-Genetic-Direction-Based-Stochastic-Search.html
@@ -57,23 +57,10 @@ The code for this example can be found here. A test example for constrained opti
 The equation below show the original objective function (obj), equality constraint (eq), inequality constraint (ineq), the objective function modified for the gentic algorithm, and the parameters' upper and lower bounds. L2 penalty values, p1 and p2, are applied to the equality and inequality constraints.
 </p>
 
-<code>
-minimize obj: x**2+y
-
-s.t.
-
-eq: 2*x - y = 0
-
-ineq : x + y + 1 > 0
-
-genetic obj: x**2+y + p1*eq(x)**2 + p1*min(0,ineq(x))**2
-
-bounds: -5&lex&ge5, -5&ley&ge5
-    
-</code>
+<figure><img src='/moircga_images/output_7.png' /> <figcaption></figcaption></figure>
 
 <p>
-The initial population is generated from a random uniform distribution between the upper and lower bound for each parameter.
+Where eq and ineq are the equality and inequality constraints, respectively. The initial population is generated from a random uniform distribution between the upper and lower bound for each parameter.
 </p>
 
 <h1>Ranking</h1>
@@ -95,36 +82,22 @@ The direction components are made of averages between the top candidates. There 
 (5) an average of (1), (3), and (4) DAVG.
 </p>
 <h1>Normal Distribution Crossovers</h1>
-<p>
-NORMAL(DAVG,((XNi-XMi)/12)**2+e-15))
-</p>
-<p>
-NORMAL(BEST,((BEST-AVGN)/12)**2 +e-15))
-</p>
+<figure><img src='/moircga_images/output_0.png' /> <figcaption></figcaption></figure>
+<figure><img src='/moircga_images/output_1.png' /> <figcaption></figcaption></figure>
 
 <p>
 The first crossover searches the space between the AVGN, BEST, and XNi. The search energy is defined as the squared uniform distance between XNi and XMi. The larger the difference between the ith ranked candidate and the 50+ith ranked individual, the larger the search space will be. The second crossover searches around the BEST candidate using the square uniform distance between the BEST and AVGN as the search energy.
 </p>
 <h1>Uniform Distribution Crossovers</h1>
-<p>
-BEST + UNIFORM(0,1)*(XNi-XMi)
-</p>
-<p>
-DAVG + UNIFORM(0,1)*(BEST-DAVG)
-</p>
+<figure><img src='/moircga_images/output_2.png' /> <figcaption></figcaption></figure>
+<figure><img src='/moircga_images/output_3.png' /> <figcaption></figcaption></figure>
 <p>
 The first crossover uses the difference between XNi and XMi as surrogate gradient. A standard uniform distribution is used with shift the BEST in the direction of the surrogate gradient. The second crossover uses a surrogate gradient with (BEST-DAVG), and it shift DAVG in the direction of the BEST.
 </p>
 <h1>Combinatorial Mutations</h1>
-<p>
-XNi *(1+CAUCHY(0,1))
-</p>
-<p>
-NORMAL(BEST,((BEST-XNi)/12)**2 +e-15))
-</p>
-<p>
-XNi +0.01*LEVY(1)
-</p>
+<figure><img src='/moircga_images/output_4.png' /> <figcaption></figcaption></figure>
+<figure><img src='/moircga_images/output_5.png' /> <figcaption></figcaption></figure>
+<figure><img src='/moircga_images/output_6.png' /> <figcaption></figcaption></figure>
 <p>
 A percentage of the crossover candidates will be mutated by three different operations. The operations can be randomly selected. The standard Cauchy distribution has a median value of 1, but its mean and variance are undefined. The first mutation changes the scale and/or direction of the candidate by some proportion of generated Cauchy number + 1. The second mutation re-samples the candidate around the BEST by the squared uniform distance of BEST to the candidate. The third mutation uses Levy flights to simulate a random walk characterized by many small changes and a few large displacements.
 </p>
