--- a/_posts/2020-04-13-MATH_JAX_TEST.html
+++ b/_posts/2020-04-13-MATH_JAX_TEST.html
@@ -1,12 +1,10 @@
 ---
 layout: post
-title:  "DataScienceCentral.com - Complex Time Series Challenge"
-date: 2015-04-05 12:00:00
+title:  "MathJax Test"
+date: 2020-04-13 12:00:00
 author: Rohan Kotwani
-excerpt: "How signal processing can be used to find seasonality in complex time-series."
+excerpt: ""
 tags: 
-- time
-- series
 
 ---
 
