--- a/_posts/2020-04-04-KernelML-Hierarchical-Density-Factorization.html
+++ b/_posts/2020-04-04-KernelML-Hierarchical-Density-Factorization.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "KernelML - Hierarchical Density Factorization"
+title:  "Hierarchical Density Factorization"
 date: 2020-04-04 12:00:00
 author: Rohan Kotwani
 excerpt: "Density Estimation using Multi-Agent Optimization & Rewards"
