--- a/_posts/2019-12-11-KernelML-SVM-GPU.html
+++ b/_posts/2019-12-11-KernelML-SVM-GPU.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "KernelML - SVM Optimization on a GPU"
+title:  "SVM Optimization on a GPU with Particle Swarm Optimizer"
 date: 2019-12-11 12:00:00
 author: Rohan Kotwani
 excerpt: "KernelML - SVM Optimization on a GPU"
