--- a/_posts/2019-02-18-KernelML-Density-Factorization.html
+++ b/_posts/2019-02-18-KernelML-Density-Factorization.html
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "KernelML - Density Factorization"
+title:  "Density Factorization"
 date: 2019-02-19 12:00:00
 author: Rohan Kotwani
-excerpt: "KernelML - Density Factorization"
+excerpt: "Density Factorization with KernelML"
 tags: 
 - Optimization
 - Density Clustering
