--- a/_posts/2017-09-10-Image-Acquisition-FPGA-Simulation.html
+++ b/_posts/2017-09-10-Image-Acquisition-FPGA-Simulation.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "2-Photon Microscope Image Acquisition - PMT and FGPA Simulation"
+title:  "PMT and FGPA Simulation"
 date: 2017-01-20 12:00:00
 author: Rohan Kotwani
 excerpt: "PMT and FGPA simulation of 2-photon microscope scanning hardware"
