--- a/_posts/2019-02-18-KernelML-Density-Factorization.html
+++ b/_posts/2019-02-18-KernelML-Density-Factorization.html
@@ -19,7 +19,7 @@ tags:
 <body>
 
     <p>
-    KernelML is a particle optimizer that uses parameter constraints and sampling methods to minimize a customizable loss function. The package uses a Cythonized backend and parallelizes operations across multiple cores with the Numba. KernelML is now available on the Anaconda cloud and PyPi (pip). Please see the KernelML <a href="https://github.com/Freedomtowin/kernelml/">extention</a> on the documentation page.</p>
+    KernelML is a particle optimizer that uses parameter constraints and sampling methods to minimize a customizable loss function. The package uses a Cythonized backend and parallelizes operations across multiple cores with the Numba. KernelML is now available on the Anaconda cloud and PyPi (pip). Please see the KernelML <a href="https://github.com/Freedomtowin/https://github.com/freedomtowin/high-density-region-estimator/">extention</a> on the documentation page.</p>
 
     
     <h1>Density Factorization</h1>
